# amp

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  default.nix  devenv.nix  devenv.yaml  flake.nix  justfile  shell.nix
.agents/skills/syntax-definition/: SKILL.md
.agents/skills/theme-definition/: SKILL.md
.agents/skills/theme-definition/references/: token-color-standard.md
.github/workflows/: ci-without-features.yml  ci.yml  release.yml  rust.yml  test.yml
benches/view/: draw_buffer.rs
ci/: before_deploy.sh
docs/: architecture.md  conventions.md
documentation/: Dockerfile  mkdocs.yml  quick_start_guide
documentation/pages/: configuration.md  index.md  installation.md  preferences.md  usage.md
documentation/pages/stylesheets/: extra.css
snap/: snapcraft.yaml
src/: application.rs  debug.rs  errors.rs  lib.rs  main.rs  terminal.rs
src/application/: mod.rs
src/application/jump_mode/: mod.rs
src/application/modes/: insert.rs  mod.rs  open.rs
src/application/modes/jump/: lexer.rs  mod.rs
src/commands/: application.rs  buffer.rs  confirm.rs  cursor.rs  git.rs  jump.rs  jump_mode.rs  line_jump.rs  mod.rs  name_buffer.rs  open.rs  open_mode.rs  path.rs  preferences.rs  search.rs  search_select.rs  search_select_mode.rs  selection.rs  symbol_jump.rs  theme.rs  view.rs  workspace.rs
src/helpers/: mod.rs  movement_lexer.rs  selectable_set.rs  token.rs
src/input/: mod.rs
src/input/commands/: application.rs  buffer.rs  cursor.rs  jump_mode.rs  mod.rs  open_mode.rs  workspace.rs
src/input/key_map/: default.yml  mod.rs
src/input/modes/: confirm.rs  insert.rs  jump.rs  line_jump.rs  mod.rs  normal.rs  open.rs  open_insert.rs  search_insert.rs  search_results.rs  search_select.rs  search_select_insert.rs  select.rs  select_line.rs  symbol_jump.rs  symbol_jump_insert.rs  theme.rs  theme_insert.rs
src/models/: mod.rs  terminal.rs
src/models/application/: clipboard.rs  editorconfig.rs  event.rs  mod.rs  preferences.rs  syntax_loader.rs
src/models/application/clipboard/: dummy_clipboard.rs  mod.rs  system_clipboard.rs
src/models/application/modes/: buffer.rs  confirm.rs  insert.rs  line_jump.rs  mod.rs  name_buffer.rs  open.rs  path.rs  search.rs  search_insert.rs  search_results.rs  (+6 more)
src/presenters/: error.rs  mod.rs
src/presenters/modes/: confirm.rs  default.rs  insert.rs  jump.rs  line_jump.rs  mod.rs  name_buffer.rs  normal.rs  open.rs  paste.rs  path.rs  search.rs  search_insert.rs  search_select.rs  select.rs  select_line.rs  symbol_jump.rs  theme.rs
src/themes/: solarized_dark.tmTheme
src/util/: mod.rs  movement_lexer.rs  reflow.rs  selectable_vec.rs  token.rs
src/view/: buffer.rs  buffer_renderer.rs  color.rs  data.rs  event_listener.rs  input_listener.rs  jump_token.rs  mod.rs  open.rs  presenter.rs  scrollable_region.rs  style.rs  terminal.rs  theme_loader.rs
src/view/buffer/: buffer_renderer.rs  lexeme_mapper.rs  line_numbers.rs  mod.rs  render_cache.rs  render_state.rs  renderer.rs  scrollable_region.rs
src/view/color/: colors.rs  map.rs  mod.rs
src/view/jump/: mod.rs  token_sequence.rs
src/view/jump_mode/: mod.rs  tag_generator.rs
src/view/modes/: default.rs  line_jump.rs  mod.rs  open.rs  search_insert.rs
src/view/presenters/: buffer.rs  mod.rs
src/view/terminal/: buffer.rs  buffer_iterator.rs  cell.rs  cursor.rs  input_parser.rs  mod.rs  rustbox_terminal.rs  termion_terminal.rs  test_terminal.rs
syntaxes/: Dockerfile.sublime-syntax  Justfile.sublime-syntax  Nix.sublime-syntax
tests/: syntaxes.rs  theme_compiler.rs
tests/fixtures/user_syntaxes/: Amp.sublime-syntax
tests/fixtures/user_themes/: fixture_theme.tmTheme
themes/: monokai_extended.tmTheme  monokai_extended.yml  solarized_dark.tmTheme  solarized_dark.yml  solarized_light.tmTheme  solarized_light.yml
(+19 files in other folders)
