[package]

name = "amp"
version = "0.6.2"
authors = ["Jordan MacDonald <jordan@wastedintelligence.com>"]
description = "A complete text editor for your terminal."
homepage = "https://amp.rs"
repository = "https://github.com/jmacdonald/amp"
documentation = "https://amp.rs/docs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["text", "editor", "terminal", "modal"]
edition="2018"

[build-dependencies]
regex = "1.3.4"

[dependencies]
app_dirs = "1.2.1"
scribe = "0.7.2"
pad = "0.1.4"
bloodhound = "0.5.4"
luthor = "0.1.7"
fragment = "0.3.1"
regex = "^0.1"
libc = "0.2.4"
syntect = "2.1.0"
termion = "1.5.1"
error-chain = "0.12.4"
unicode-segmentation = "1.0.1"
yaml-rust = ">= 0.4.5"
smallvec = "0.4.3"
lazy_static = "1.2.0"
mio = "0.6"

[dependencies.clipboard]
version = "0.5.0"
optional = true

[dependencies.signal-hook]
version = "0.1.9"
features = ["mio-support"]

[dependencies.git2]
version = "0.10.1"
# We use very little of the Git crate. Disabling its default features makes it
# as bare as possible, and sidesteps its openssl dependency, among others.
default-features = false # removes unused openssl dependency

[dev-dependencies]
criterion = "0.2.0"

[features]
default = ["clipboard"]

[[bench]]
name = "draw_buffer"
path = "benches/view/draw_buffer.rs"
harness = false
