[package]

name = "amp"
version = "0.6.2"
authors = ["Jordan MacDonald <jordan@wastedintelligence.com>"]
description = "A complete text editor for your terminal."
homepage = "https://amp.rs"
repository = "https://github.com/jmacdonald/amp"
documentation = "https://amp.rs/docs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["text", "editor", "terminal", "modal"]
edition="2018"

[build-dependencies]
regex = "1.3.4"

[dependencies]
app_dirs = "1.2.1"
scribe = "0.7.2"
bloodhound = "0.5.4"
luthor = "0.1.7"
fragment = "0.3.1"
regex = "^0.1"
libc = "0.2.4"
syntect = "2.1.0"
termion = "2.0"
error-chain = "0.12.4"
unicode-segmentation = "1.0.1"
clipboard = "0.4.4"
yaml-rust = ">= 0.4.5"
smallvec = "1.10.0"
lazy_static = "1.2.0"
mio = "0.6"

[dependencies.signal-hook]
version = "0.1.9"
features = ["mio-support"]

[dependencies.git2]
version = "0.10.1"
# We use very little of the Git crate. Disabling its default features makes it
# as bare as possible, and sidesteps its openssl dependency, among others.
default-features = false # removes unused openssl dependency

[dev-dependencies]
criterion = "0.2.0"

[[bench]]
name = "draw_buffer"
path = "benches/view/draw_buffer.rs"
harness = false
